<resources>
    <string name="app_name">GuG Movies</string>

    <string name="common_">GuG Movies</string>

    <string name="text_">GuG Movies</string>
    <string name="text_videos">Videos</string>
    <string name="text_genres">Géneros</string>
    <string name="text_productionCompanies">Compañias productoras</string>
    <string name="text_languages">Idiomas</string>

    <string name="text_hint_search">Busqueda</string>
    <string name="text_durationMinutes">%1$s Mins.</string>

    <string name="msg_error">Ha ocurrido un error en la consulta</string>
    <string name="msg_error_gomelo">Uuuups estas queriendo ver una pelicula como rara \n Le daremos solución muy pronto \n Go Go Go !!!</string>
    <string name="msg_empty">No hay peliculas por mostrar</string>

    <string name="menu_bottom_popular">Populares</string>
    <string name="menu_bottom_topRated">En el Top</string>
    <string name="menu_bottom_upComing">Pronto</string>
    <string name="menu_search">Busqueda</string>

    <string name="title_movieDetail">Detalle de pelicula</string>

    <string name="lorem_words_50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean congue nisl ante, vel facilisis ex mattis at. Nullam luctus egestas odio eget interdum. In congue, velit sit amet ullamcorper dictum, dolor lectus pulvinar massa, non sodales arcu orci a mauris. Etiam posuere vulputate magna at iaculis. Curabitur gravida leo tortor.</string>

</resources>
